<resources>
    <string name="app_name">SimplyFit</string>
    <string name="title_activity_maps">Map</string>
    <string name="logo_for_the_top_menu">Logo for the top menu</string>

    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="weight">Weight(kg)</string>
    <string name="height">Height(cm)</string>
    <string name="register">REGISTER</string>
    <string name="go_back_to_login">GO BACK TO LOGIN</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="not_a_member_yet">Not a member yet?</string>
    <string name="register_for_free">REGISTER FOR FREE</string>
    <string name="your_heart_rate_is">Your heart rate is</string>
    <string name="number_of_steps_you_walked_today">Number of steps you walked today</string>
    <string name="ambient_air_temperature">Ambient air temperature (°C)</string>
    <string name="your_bmi_is">Your BMI is</string>
    <string name="you_are_thin">You are thin</string>
    <string name="you_are_healthy">You are healthy</string>
    <string name="you_are_overweight">You are overweight</string>
    <string name="you_are_obese">You are obese</string>
    <string name="set_new_values">SET NEW VALUES</string>
    <string name="temperature_sensor_is_not_available">Temperature sensor is not available</string>
    <string name="your_pace_will_reduce_by">Your pace will reduce by</string>
    <string name="you_should_avoid_physical_activities">You should avoid physical activities</string>
    <string name="address_not_found">Address not found</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="current_position">Current position</string>
    <string name="settings">Settings</string>
    <string name="gallery">Gallery</string>
    <string name="audio">Audio</string>
    <string name="take_photo">Take Photo</string>
    <string name="logout">Logout</string>
    <string name="music">Music</string>
    <string name="invalid_input">Invalid Input</string>
    <string name="login_failed">Login Failed</string>
    <string name="ok">OK</string>
    <string name="crop">CROP</string>
    <string name="blur">BLUR</string>
    <string name="grayscale">GRAY SCALE</string>
    <string name="step_sensor_is_not_available">Step sensor is not available</string>
    <string name="data_loaded">Data loaded</string>
    <string name="database_error">Database error</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="language">Language</string>
    <string name="turkish">Turkish</string>
    <string name="english">English</string>
    <string name="place_your_finger_on_the_sensor">Place your finger on the sensor</string>
    <string name="place_your_finger_properly">Place your finger properly</string>
    <string name="place_your_finger_on_the_sensor_and_press_it_gently_for_a_few_seconds">Place your finger on the sensor and press it gently for a few seconds</string>
    <string name="daily_step_goal">Daily Step Goal</string>
    <string name="HYPHEN">-</string>
</resources>
