<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout_settings_topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="?attr/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_settings_logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/logo_for_the_top_menu"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView_settings_user"
            app:layout_constraintStart_toEndOf="@+id/imageButton_settings_back"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?android:icon" />

        <ImageView
            android:id="@+id/imageView_settings_user"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:tint="?android:colorForeground"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/finalproject_user_icon" />

        <ImageButton
            android:id="@+id/imageButton_settings_back"
            android:layout_width="30dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:background="#00000000"
            android:scaleType="fitCenter"
            android:src="@drawable/finalproject_back_icon"
            android:tint="?android:colorForeground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_settings_topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_settings_theme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/theme"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_theme"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_theme_light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/light"
                    android:textColor="?android:textColor"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_theme_dark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/dark"
                    android:textColor="?android:textColor"
                    android:textSize="16sp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners_bg"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_settings_language"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimaryDark"
                android:gravity="center"
                android:text="@string/language"
                android:textSize="24sp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radioGroup_language"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton_language_tr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:text="@string/turkish"
                    android:textColor="?android:textColor"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/radioButton_language_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/english"
                    android:textColor="?android:textColor"
                    android:textSize="16sp" />
            </RadioGroup>


        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>