<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorDialogBackground">

    <ImageView
        android:id="@+id/imageView_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?attr/colorMenuBackground"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/finalproject_user_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorMenuBackground"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_picture">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="352dp">

            <Button
                android:id="@+id/buttonCrop"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="@string/crop"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonBlur"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="@string/blur"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/buttonGrey"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="?attr/colorPrimary"
                android:text="@string/grayscale"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            android:text="@string/ok"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="416dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>